--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,55 @@ node_modules/
 
 # Python
 venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Vercel
 .vercel/
 
 # Logs
 *.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase
+*-firebase-adminsdk-*.json
+firebase_config.py
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
