Update backend configuration for Vercel deployment

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ FIREBASE_CONFIG={ apiKey: "AIzaSyB-NQIldgA27kMzWeD3XQI2L9a1TDumHSc",
 FIREBASE_API_KEY="AIzaSyB-NQIldgA27kMzWeD3XQI2L9a1TDumHSc"
 CORS_ORIGINS=http://localhost:3000,https://your-production-frontend.com
 OPENAI_API_KEY="sk-proj-0123456789abcdef0123456789abcdef"
+VITE_API_URL=https://your-backend-url.vercel.app
