--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,15 @@ beautifulsoup4==4.12.3
 nltk==3.8.1
 spacy==3.7.4
 gunicorn==21.2.0
-dnspython==2.5.0 
+dnspython==2.5.0
+Werkzeug==3.0.1
+click==8.1.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+urllib3==2.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
+soupsieve==2.5
+tqdm==4.66.2 
